[tool.poetry]
name = "yamlchain"
version = "0.1.0"
description = "A declarative, yaml-based implementation of LangChain, with a focus on Agents and Chains."
authors = ["Aaron (AJ) Steers"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.148"
PyYAML = "^6.0"
pydantic = "^1.10.7"
typer = {extras = ["all"], version = "^0.7.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
ruff = "^0.0.262"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yamlchain = 'yamlchain.cli:cli'
